--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,5 +11,5 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=dev.mail187@gmail.com
-spring.mail.password=lawhncoaixcafwui
+spring.mail.username=
+spring.mail.password=
