User logout, account deletion, server-side validation

--- a/src/main/resources/message.properties
+++ b/src/main/resources/message.properties
@@ -1,2 +1,8 @@
 mail.accountCreated.subject=AskMe account created
 mail.accountCreated.text=You created AskMe account with this email.\n\nCongratulations!
+
+mail.emailUpdated.subject=AskMe email updated
+mail.emailUpdated.text=AskMe account email was changed to this email address
+
+mail.accountDeleted.subject=AskMe account deleted
+mail.accountDeleted.text=Your AskMe account was deleted
