Answers page implemented, answer and question updates using websockets

--- a/build.gradle
+++ b/build.gradle
@@ -17,6 +17,8 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-security'
     implementation 'org.springframework.boot:spring-boot-starter-web'
     providedRuntime 'org.springframework.boot:spring-boot-starter-tomcat'
+    implementation 'org.springframework.boot:spring-boot-starter-websocket'
+    implementation 'org.springframework.security:spring-security-messaging:5.7.2'
 
     implementation 'commons-beanutils:commons-beanutils:1.9.4'
 
